shelf: Do not change autohide or alignment when in tablet mode.

Autohide should always be false, and alignment should always be bottom
aligned when in tablet mode, so display rotations and others should
not affect them.

Test: ash_unittests ShelfControllerPrefsTest.ShelfSettingsInTabletMode
Bug: 787142
Change-Id: Ia2c5d43cdd0ddbe4982ca0b693a9411d8d9c267b